--- a/assignment.yaml
+++ b/assignment.yaml
@@ -2,7 +2,8 @@ id: r0800964PRE1
 title: pretest 
 hideFeedback: true
 info: >-
-    Bekijk volgende oefening en duid het correcte antwoord aan. 
+    Voor onze thesis rond oromyofunctionele problematieken werd er een module opgesteld in PerceptionLab over dit onderwerp. Deze test is volledig anoniem en is bedoeld om uw vaardigheid in kaart te brengen voordat u de online module doorloopt. Tracht de vragen steeds eerlijk te beantwoorden, zo kunnen wij een betrouwbare analyse maken. Hierbij is het belangrijk dat u geen hulpmiddelen gebruikt.
+Alvast bedankt voor uw medewerking en veel succes gewenst bij het invullen van de vragenlijst en het doorlopen van de oefenmodule! 
 assignmentSpec:
   type: selection
   opts:
